--- a/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj
+++ b/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj
@@ -143,7 +143,52 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Helper\BufferHelper.cpp" />
+    <ClCompile Include="Helper\ErrorLog.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Scene\Mesh.cpp" />
+    <ClCompile Include="Scene\ModelHelper.cpp" />
+    <ClCompile Include="Scene\ModelReader\MtlReader.cpp" />
+    <ClCompile Include="Scene\ModelReader\ObjHelper.cpp" />
+    <ClCompile Include="Setup\D3D11Helper.cpp" />
+    <ClCompile Include="Setup\PipelineHelper.cpp" />
+    <ClCompile Include="Setup\WindowHelper.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="PixelShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="VertexShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Helper\BufferHelper.h" />
+    <ClInclude Include="Helper\BufferType.h" />
+    <ClInclude Include="Helper\ErrorLog.h" />
+    <ClInclude Include="Helper\Vertex.h" />
+    <ClInclude Include="Scene\Mesh.h" />
+    <ClInclude Include="Scene\ModelHelper.h" />
+    <ClInclude Include="Scene\ModelReader\MtlReader.h" />
+    <ClInclude Include="Scene\ModelReader\ObjHelper.h" />
+    <ClInclude Include="Scene\Texture.h" />
+    <ClInclude Include="Setup\D3D11Helper.h" />
+    <ClInclude Include="Setup\PipelineHelper.h" />
+    <ClInclude Include="Setup\WindowHelper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
