--- a/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj.filters
+++ b/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj.filters
@@ -40,6 +40,12 @@
     <Filter Include="Source Files\Scene\ModelReader">
       <UniqueIdentifier>{f71845f6-8ac7-4d27-8cbf-802c4dd5f43e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\View">
+      <UniqueIdentifier>{ed417dc4-3335-41d7-bab8-b8a19d545178}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\View">
+      <UniqueIdentifier>{4ff17c87-bdc7-4865-8d85-05e8627f64f6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -63,14 +69,17 @@
     <ClCompile Include="Helper\ErrorLog.cpp">
       <Filter>Source Files\Helper</Filter>
     </ClCompile>
-    <ClCompile Include="Scene\ModelHelper.cpp">
-      <Filter>Source Files\Scene</Filter>
-    </ClCompile>
     <ClCompile Include="Scene\ModelReader\ObjHelper.cpp">
       <Filter>Source Files\Scene\ModelReader</Filter>
     </ClCompile>
     <ClCompile Include="Scene\ModelReader\MtlReader.cpp">
       <Filter>Source Files\Scene\ModelReader</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files\View</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene\ModelHelper.cpp">
+      <Filter>Source Files\Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -100,9 +109,6 @@
     <ClInclude Include="Scene\Mesh.h">
       <Filter>Header Files\Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Scene\Texture.h">
-      <Filter>Header Files\Scene</Filter>
-    </ClInclude>
     <ClInclude Include="Helper\Vertex.h">
       <Filter>Header Files\Helper</Filter>
     </ClInclude>
@@ -117,6 +123,9 @@
     </ClInclude>
     <ClInclude Include="Scene\ModelReader\MtlReader.h">
       <Filter>Header Files\Scene\ModelReader</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files\View</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
