Lägg till så att depth.hlsl finns annars bara börjat

--- a/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj.filters
+++ b/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj.filters
@@ -92,6 +92,9 @@
     <FxCompile Include="ComputeShader.hlsl">
       <Filter>Resource Files\HLSL</Filter>
     </FxCompile>
+    <FxCompile Include="VertexShaderDepth.hlsl">
+      <Filter>Resource Files\HLSL</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Setup\PipelineHelper.h">
