--- a/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj
+++ b/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj
@@ -151,11 +151,11 @@
     <ClCompile Include="Scene\ModelHelper.cpp" />
     <ClCompile Include="Scene\ModelReader\MtlReader.cpp" />
     <ClCompile Include="Scene\ModelReader\ObjHelper.cpp" />
+    <ClCompile Include="Setup\CubeMappingHelper.cpp" />
     <ClCompile Include="Setup\D3D11Helper.cpp" />
     <ClCompile Include="Setup\ParticleHelper.cpp" />
     <ClCompile Include="Setup\PipelineHelper.cpp" />
     <ClCompile Include="Setup\ShadowHelper.cpp" />
-    <ClCompile Include="Setup\TesseleringHelper.cpp" />
     <ClCompile Include="Setup\WindowHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -237,6 +237,13 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
+    <FxCompile Include="VertexShaderCubeMapping.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </FxCompile>
     <FxCompile Include="VertexShaderDepth.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
@@ -263,11 +270,11 @@
     <ClInclude Include="Scene\ModelHelper.h" />
     <ClInclude Include="Scene\ModelReader\MtlReader.h" />
     <ClInclude Include="Scene\ModelReader\ObjHelper.h" />
+    <ClInclude Include="Setup\CubeMappingHelper.h" />
     <ClInclude Include="Setup\ParticleHelper.h" />
     <ClInclude Include="Setup\ShadowHelper.h" />
     <ClInclude Include="Setup\D3D11Helper.h" />
     <ClInclude Include="Setup\PipelineHelper.h" />
-    <ClInclude Include="Setup\TesseleringHelper.h" />
     <ClInclude Include="Setup\WindowHelper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
