cubemapping funkar ej behöver göra skit
Detta är att se till att den tar in srv,
rtv/uav och kanske depth. Detta är bra att kolla vad som behövs och sen skicka det till min computer shader för render där jag behöver använda dess uav för att använda mig utav skuggan detta är fint.

--- a/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj.filters
+++ b/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj.filters
@@ -137,6 +137,9 @@
     <FxCompile Include="VertexShaderCubeMapping.hlsl">
       <Filter>Resource Files\HLSL\CubeMapping\First-stage</Filter>
     </FxCompile>
+    <FxCompile Include="PixelShaderCubeMapping.hlsl">
+      <Filter>Resource Files\HLSL\CubeMapping\First-stage</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Setup\PipelineHelper.h">
